force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/ucinn_ascendv2__Utility_Lookup_Setting__mdt.object-meta.xml
<CustomObject>
    <description>For specifying values related to the custom ascend Lookup Component.</description>
    <label>Utility Lookup Setting</label>
    <pluralLabel>Utility Lookup Settings</pluralLabel>
</CustomObject>