force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Constituent_Campaign_Member_Appeal__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Constituent_Campaign_Member_Appeal__c</fullName>
    <description>Number of Campaign Member Appeals to display</description>
    <inlineHelpText>Number of Campaign Member Appeals to display</inlineHelpText>
    <label>Constituent Campaign Member Appeal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>