force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Constituent_Gift_Appeal__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Constituent_Gift_Appeal__c</fullName>
    <description>Number of Historic Gifts to show for Constituent</description>
    <inlineHelpText>Number of Historic Gifts to show for Constituent</inlineHelpText>
    <label>Constituent Gift Appeal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>