force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Display_Icon__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Display_Icon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For displaying an icon on the lookup.</description>
    <inlineHelpText>For displaying an icon on the lookup.</inlineHelpText>
    <label>Display Icon</label>
    <type>Checkbox</type>
</CustomField>