force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Dynamic_Lookup_to_Configure__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Dynamic_Lookup_to_Configure__c</fullName>
    <description>Dynamic lookups do not have a defined metadata pull configurations from. This field used to identify which dynamic lookups to configure. The format is &lt;sObjectAPIName&gt;-&lt;fieldAPIName&gt;. Exmaple: &quot;ucinn_ascendv2__Contact_Report__c-ucinn_ascendv2__Contact__c&quot;.</description>
    <inlineHelpText>Enable configurations for defined dynamic lookup. String of object API name and field API name separated by hyphen. Exmaple: &quot;ucinn_ascendv2__Contact_Report__c-ucinn_ascendv2__Contact__c&quot;.</inlineHelpText>
    <label>Dynamic Lookup to Configure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>