force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Enable_Search_Bar__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Search_Bar__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Allow or disallow searching on the table via a search bar.</description>
    <inlineHelpText>Checking the box will cause the search bar to appear, and un-checking the box will cause the search bar to be hidden from view.</inlineHelpText>
    <label>Enable Search Bar</label>
    <type>Checkbox</type>
</CustomField>