force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Fields_to_Diplay_on_Table__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fields_to_Diplay_on_Table__c</fullName>
    <description>A comma separated list in form [&quot;field1&quot;,&quot;field2&quot;...] which determine what fields to put onto the table. Include namespaces if the field is part of a managed package.</description>
    <inlineHelpText>A comma separated list in form [&quot;field1&quot;,&quot;field2&quot;...] which determine what fields to put onto the table. Include namespaces if the field is part of a managed package.</inlineHelpText>
    <label>Fields to Display on Table</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>