force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Icon_Name__c</fullName>
    <description>For specifying an Icon Name.</description>
    <inlineHelpText>For specifying an Icon Name.</inlineHelpText>
    <label>Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>