force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__ID_Field__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__ID_Field__c</fullName>
    <description>Preferably indexed field name that can be used to search by. Such as the donor ID field.</description>
    <inlineHelpText>Preferably indexed field name that can be used to search by. Such as the donor ID field.</inlineHelpText>
    <label>ID Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>