force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__ID_Field_Search_Key_Length__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__ID_Field_Search_Key_Length__c</fullName>
    <description>Only start to search for the ID field when the search key is this length or more.</description>
    <inlineHelpText>Only start to search for the ID field when the search key is this length or more.</inlineHelpText>
    <label>ID Field Search Key Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>