force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Is_ID_Field_Numeric__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_ID_Field_Numeric__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only search by ID field when user types in numeric characters.</description>
    <inlineHelpText>Only search by ID field when user types in numeric characters.</inlineHelpText>
    <label>Is ID Field Numeric</label>
    <type>Checkbox</type>
</CustomField>