force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Modal_Header__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Modal_Header__c</fullName>
    <description>Option to set a custom header for the modal.</description>
    <inlineHelpText>Option to set a custom header for the modal.</inlineHelpText>
    <label>Modal Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>