force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Number_of_Records_Per_Load__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Records_Per_Load__c</fullName>
    <description>Number of records loaded for the lookup search modal table.</description>
    <inlineHelpText>Number of records to load for the table.</inlineHelpText>
    <label>Number of Records Per Load</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>