force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Number_of_Records_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Records_Per_Page__c</fullName>
    <description>Number of records per page for the lookup search modal table.</description>
    <inlineHelpText>Number of records per page for the search modal table.</inlineHelpText>
    <label>Number of Records Per Page</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>