force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Number_of_Records_To_Fetch__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Records_To_Fetch__c</fullName>
    <description>Number of records to fetch when searching.</description>
    <inlineHelpText>Number of records to fetch when searching.</inlineHelpText>
    <label>Number of Records To Fetch</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>