force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Object_Page_Layout__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Object_Page_Layout__c</fullName>
    <description>String of the Object API Name and Page Layout Label separated by a hyphen.
e.g &quot;Contact-New Constituent Layout&quot;</description>
    <inlineHelpText>String of the Object API Name and Page Layout Label separated by a hyphen.
e.g &quot;Contact-New Constituent Layout&quot;</inlineHelpText>
    <label>Object Page Layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>