force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Order_by_Direction__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Order_by_Direction__c</fullName>
    <description>The default ordering direction for the column specified in the Order By field.</description>
    <inlineHelpText>The value can either by ASC or DESC.</inlineHelpText>
    <label>Order By ASC or DESC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>