force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Proposal_Records__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Proposal_Records__c</fullName>
    <description>Number of records to show for Proposals</description>
    <inlineHelpText>Number of records to show for Proposals</inlineHelpText>
    <label>Proposal Records to Show</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>