force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Record_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_Type_Label__c</fullName>
    <description>Label of the object&apos;s record type.</description>
    <inlineHelpText>Label of the object&apos;s record type.</inlineHelpText>
    <label>Record Type Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>