force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_Type_Name__c</fullName>
    <description>API name of the record type.</description>
    <inlineHelpText>API name of the record type.</inlineHelpText>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>