force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__SObject_Name__c</fullName>
    <description>API name of the SObject that we will be searching for.</description>
    <inlineHelpText>API name of the SObject that we will be searching for.</inlineHelpText>
    <label>SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>