force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Sort__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Sort__c</fullName>
    <description>ASC or DESC. This field is used to sort Gift Appeals and Proposals</description>
    <inlineHelpText>ASC or DESC. This field is used to sort Gift Appeals and Proposals</inlineHelpText>
    <label>Sort Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>