force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Sort_Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Sort_Campaign_Member__c</fullName>
    <description>ASC or DESC for Campaign Members</description>
    <inlineHelpText>ASC or DESC for Campaign Members</inlineHelpText>
    <label>Sort Order Campaign Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>