force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Utility_Lookup_Default_Setting__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Utility_Lookup_Default_Setting__c</fullName>
    <description>The default setting that holds the default values.</description>
    <inlineHelpText>The default setting that holds the default values.</inlineHelpText>
    <label>Utility Lookup Default Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>