force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Where_Clause_Condition_String__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Where_Clause_Condition_String__c</fullName>
    <description>Where clause condition string in the form of &quot;{0} = &apos;Business_Organization&apos; OR {1} = &apos;Corporations_and_Organizations&quot;, where {0} refers to the first field in the &quot;Where Clause Fields&quot; field.{BLANK} does not inherit default.{v.recordId} is contact/account&apos;s donor Id.</description>
    <inlineHelpText>In the form of &quot;{0} = &apos;Business_Organization&apos; OR {1} = &apos;Corporations_and_Organizations&quot;, where {0} is the first field in the &quot;Where Clause Fields&quot; field.{BLANK} prevents inheriting default value.{v.recordId} is contact/account&apos;s donor Id.</inlineHelpText>
    <label>Where Clause Condition String</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>