force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/validationRules/ucinn_ascendv2__Fields_with_number_input_must_be_greater.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Fields_with_number_input_must_be_greater</fullName>
    <active>true</active>
    <description>Fields with number input must be greater than 0.</description>
    <errorConditionFormula>ucinn_ascendv2__Number_of_Records_To_Fetch__c &lt;= 0 || ucinn_ascendv2__ID_Field_Search_Key_Length__c &lt;= 0</errorConditionFormula>
    <errorMessage>Fields with number input must be greater than 0.</errorMessage>
</ValidationRule>