force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/validationRules/ucinn_ascendv2__Fields_with_number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Fields_with_number_validation</fullName>
    <active>true</active>
    <errorConditionFormula>(ucinn_ascendv2__Number_of_Records_Per_Page__c &lt;= 0) ||
(ucinn_ascendv2__Number_of_Records_Per_Load__c &lt;= 0) ||
(ucinn_ascendv2__ID_Field_Search_Key_Length__c &lt;= 0) ||
(ucinn_ascendv2__Number_of_Records_Per_Page__c &gt; 500) ||
(ucinn_ascendv2__Number_of_Records_Per_Load__c &gt; 1000)</errorConditionFormula>
    <errorMessage>Number fields cannot be less than 0.
Number of Records Per Page cannot be greater than 500.
Number of Records Per Load cannot be greater than 1000.</errorMessage>
</ValidationRule>