force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>ucinn_ascendv2__Number_of_Records_To_Fetch__c</columns>
    <columns>ucinn_ascendv2__SObject_Name__c</columns>
    <columns>ucinn_ascendv2__Fields_To_Display__c</columns>
    <columns>ucinn_ascendv2__Utility_Lookup_Default_Setting__c</columns>
    <columns>ucinn_ascendv2__Where_Clause_Condition_String__c</columns>
    <columns>ucinn_ascendv2__Where_Clause_Fields__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>